Documentation edits made through Mintlify web editor

--- a/app-builder/builder/pages/minigame-page.mdx
+++ b/app-builder/builder/pages/minigame-page.mdx
@@ -3,13 +3,14 @@ title: "Mini Game"
 description: "Description of your new file."
 icon: "circle-user"
 ---
-### **3.3.8. Mini Game** 
+
+### **3.3.8. Mini Game**
 
 **Dữ liệu**
 
 **Thêm phần thưởng mới**
 
-* **Bước 1**: Người dùng nhấn vào nút "Thêm phần thưởng mới"
+- **Bước 1**: Người dùng nhấn vào nút "Thêm phần thưởng mới"
 
 <Frame caption="Nút thêm mới  ">
   <img
@@ -20,10 +21,9 @@ icon: "circle-user"
   />
 </Frame>
 
-
-  * **Bước 2:**  
-    * Người dùng nhập Tên tiêu đề  
-    * Người dùng nhấn "Tải ảnh lên hoặc chọn ảnh từ thư viện"   
+- **Bước 2:**
+  - Người dùng nhập Tên tiêu đề
+  - Người dùng nhấn "Tải ảnh lên hoặc chọn ảnh từ thư viện"
 
 <Frame caption="Thêm dữ liệu   ">
   <img
@@ -34,9 +34,9 @@ icon: "circle-user"
   />
 </Frame>
 
-  * **Bước 3**: Người dùng nhấn "Thêm dữ liệu" để tiến hành thêm mới hoặc nhấn "Hủy bỏ" để hủy quá trình thêm dữ liệu  
-* **Chỉnh sửa:**  
-  * **Bước 1:** Người dùng nhấn vào nút ![][image94]để đến trang chỉnh sửa
+- **Bước 3**: Người dùng nhấn "Thêm dữ liệu" để tiến hành thêm mới hoặc nhấn "Hủy bỏ" để hủy quá trình thêm dữ liệu
+- **Chỉnh sửa:**
+  - **Bước 1:** Người dùng nhấn vào nút <Icon icon="pencil" color="#cfcfcf" size={15} /> để đến trang chỉnh sửa
 
 <Frame caption="Nút chỉnh sửa  ">
   <img
@@ -47,7 +47,7 @@ icon: "circle-user"
   />
 </Frame>
 
-  * **Bước 2:** Người dùng nhập Tên tiêu đề và Tải anh lên hoặc chọn ảnh từ thư viện
+- **Bước 2:** Người dùng nhập Tên tiêu đề và Tải anh lên hoặc chọn ảnh từ thư viện
 
 <Frame caption="Trang chỉnh sửa dữ liệu  ">
   <img
@@ -58,10 +58,9 @@ icon: "circle-user"
   />
 </Frame>
 
-
-  * **Bước 3**: Người dùng nhấn "Lưu chỉnh sửa" để tiến hành chỉnh sửa hoặc nhấn "Hủy bỏ" để hủy quá trình chỉnh sửa dữ liệu  
-* **Xóa:**  
-  * **Bước 1:** Người dùng nhấn vào nút ![][image97]để xóa dữ liệu
+- **Bước 3**: Người dùng nhấn "Lưu chỉnh sửa" để tiến hành chỉnh sửa hoặc nhấn "Hủy bỏ" để hủy quá trình chỉnh sửa dữ liệu
+- **Xóa:**
+  - **Bước 1:** Người dùng nhấn vào nút <Icon icon="minus" color="#cfcfcf" size={15} /> để xóa dữ liệu
 
 <Frame caption="Nút xóa  ">
   <img
@@ -72,18 +71,17 @@ icon: "circle-user"
   />
 </Frame>
 
- 
-  * **Bước 2:** Tại hộp thông báo hiện lên, người dùng nhấn 'Xóa ngay" để tiến hành xóa hoặc nhấn "Hủy" để hủy quá trình xóa dữ liệu
+- **Bước 2:** Tại hộp thông báo hiện lên, người dùng nhấn 'Xóa ngay" để tiến hành xóa hoặc nhấn "Hủy" để hủy quá trình xóa dữ liệu
 
 **Tiêu đề**
 
-		**Nền**
+**Nền**
 
-* Chọn màu nền cho tiêu đề game bằng cách nhấn ô vuông ![][image120]sau đó chọn màu  
-  * Chuyển đổi qua lại giữa 2 trạng thái có màu nền và không có màu nền bằng cách nhấn nút ![][image121]  
-    * Xóa màu nền bằng cách nhấn nút ![][image122]  
-  * **Hiển thị tiêu đề:**  
-    * Người dùng nhấn nút ![][image123]để chuyển đổi qua lại giữa 2 trạng thái có tiêu đề và không có tiêu đề, ngoài ra người dùng có thể nhập tiêu đề cho trang cá nhân. Ví dụ, nếu tiêu đề là "Game" thì sẽ hiển thị như sau:
+- Chọn màu nền cho tiêu đề game bằng cách nhấn ô vuông ![][image120]sau đó chọn màu
+  - Chuyển đổi qua lại giữa 2 trạng thái có màu nền và không có màu nền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
+    - Xóa màu nền bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
+  - **Hiển thị tiêu đề:**
+    - Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có tiêu đề và không có tiêu đề, ngoài ra người dùng có thể nhập tiêu đề cho trang cá nhân. Ví dụ, nếu tiêu đề là "Game" thì sẽ hiển thị như sau:
 
 <Frame caption="Tiêu đề game  ">
   <img
@@ -94,53 +92,45 @@ icon: "circle-user"
   />
 </Frame>
 
+- **Kích thước/ Màu sắc**:
+  - Người dùng có thể điều chỉnh kích thước và màu sắc cho tiêu đề của phần game tại ![][image125]
+- **Hiển thị Phần thưởng**:
+  - Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có phần thưởng và không có phần thưởng
+- **Hiển thị Hướng dẫn**:
+  - Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có hướng dẫn và không có hướng dẫn
 
-  * **Kích thước/ Màu sắc**:  
-    * Người dùng có thể điều chỉnh kích thước và màu sắc cho tiêu đề của phần game tại ![][image125]  
-  * **Hiển thị Phần thưởng**:  
-    * Người dùng nhấn nút ![][image176]để chuyển đổi qua lại giữa 2 trạng thái có phần thưởng và không có phần thưởng  
-  * **Hiển thị Hướng dẫn**:  
-    * Người dùng nhấn nút ![][image176]để chuyển đổi qua lại giữa 2 trạng thái có hướng dẫn và không có hướng dẫn
-
-		**Hiển thị Xếp hạng**:
-
-* Người dùng nhấn nút ![][image176]để chuyển đổi qua lại giữa 2 trạng thái có xếp hạng và không có xếp hạng
+    **Hiển thị Xếp hạng**:
+- Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có xếp hạng và không có xếp hạng
 
 **Mini Game**
 
-		**Vị trí**
+**Vị trí**
 
-			Người dùng có thể điều chỉnh vị trí tại
+Người dùng có thể điều chỉnh vị trí tại
 
 **![][image183]**
 
-		**Màu nền phần thưởng 1**
+**Màu nền phần thưởng 1**
 
 Chọn màu nền cho phần thưởng 1 bằng cách nhấn ô vuông ![][image120]sau đó chọn màu
 
-* Chuyển đổi qua lại giữa 2 trạng thái có màu nền và không có màu nền bằng cách nhấn nút ![][image121]  
-  * Xóa màu nền bằng cách nhấn nút ![][image122]
+- Chuyển đổi qua lại giữa 2 trạng thái có màu nền và không có màu nền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
+  - Xóa màu nền bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
 
-		**Màu nền phần thưởng 1**
 
-Chọn màu nền cho phần thưởng 1 bằng cách nhấn ô vuông ![][image120]sau đó chọn màu
-
-* Chuyển đổi qua lại giữa 2 trạng thái có màu nền và không có màu nền bằng cách nhấn nút ![][image121]  
-  * Xóa màu nền bằng cách nhấn nút ![][image122]
-
-		**Màu viền vòng quay**
+**Màu viền vòng quay**
 
 Chọn màu viền vòng quay bằng cách nhấn ô vuông ![][image120]sau đó chọn màu
 
-* Chuyển đổi qua lại giữa 2 trạng thái có màu nền và không có màu nền bằng cách nhấn nút ![][image121]  
-  * Xóa màu nền bằng cách nhấn nút ![][image122]
+- Chuyển đổi qua lại giữa 2 trạng thái có màu nền và không có màu nền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
+  - Xóa màu nền bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
 
-		**Nút quay**
+**Nút quay**
 
 Chọn màu nút quay bằng cách nhấn ô vuông ![][image120]sau đó chọn màu
 
-* Chuyển đổi qua lại giữa 2 trạng thái có màu nền và không có màu nút quay bằng cách nhấn nút ![][image121]  
-  * Xóa màu nút quay bằng cách nhấn nút ![][image122]  
-  * **Liên kết banner chia sẻ game** 
+- Chuyển đổi qua lại giữa 2 trạng thái có màu nền và không có màu nền nút quay bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
+  - Xóa màu nút quay bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
+  - **Liên kết banner chia sẻ game**
 
     Người dùng nhấn tải ảnh lên hoặc chọn ảnh từ thư viện để chia sẻ game
