--- a/app-builder/builder/pages/product-detail-page.mdx
+++ b/app-builder/builder/pages/product-detail-page.mdx
@@ -3,10 +3,12 @@ title: "Product Detail"
 description: "Description of your new file."
 icon: "circle-user"
 ---
-### **3.3.6. Product Detail** 
 
-**Bố cục**  
-Người dùng có thể lựa chọn các bố cục hiển thị sản phẩm, bao gồm: Đơn giản, Tinh tế, Ảnh dọc  
+### **3.3.6. Product Detail**
+
+**Bố cục**\
+Người dùng có thể lựa chọn các bố cục hiển thị sản phẩm, bao gồm: Đơn giản, Tinh tế, Ảnh dọc
+
 <Frame caption="Bố cục sản phẩm">
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image138_a4d6946512.png"
@@ -16,18 +18,20 @@ Người dùng có thể lựa chọn các bố cục hiển thị sản phẩm,
   />
 </Frame>
 
+**Tiêu đề**
 
-	**Tiêu đề**
+**Nền**
 
-		**Nền**
+- Chọn màu nền cho thẻ sản phẩm bằng cách nhấn ô vuông ![][image120] sau đó chọn màu.
+- Chuyển đổi qua lại giữa 2 trạng thái có màu nền và không có màu nền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />.
+- Xóa màu nền bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />.
 
-* Chọn màu nền cho thẻ sản phẩm bằng cách nhấn ô vuông ![][image120]sau đó chọn màu  
-  * Chuyển đổi qua lại giữa 2 trạng thái có màu nền và không có màu nền bằng cách nhấn nút ![][image121]  
-  * Xóa màu nền bằng cách nhấn nút ![][image122]  
-  * **Hiển thị tiêu đề:**  
-  * Người dùng nhấn nút ![][image123]để chuyển đổi qua lại giữa 2 trạng thái có tiêu đề và không có tiêu đề, ngoài ra người dùng có thể nhập tiêu đề cho phần sản phẩm. Ví dụ, nếu tiêu đề là "Chi tiết sản phẩm" thì phần sản phẩm sẽ như thế này
+**Hiển thị tiêu đề**
 
-<Frame caption="Tiêu đề sản phẩm  ">
+- Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có tiêu đề và không có tiêu đề.
+- Người dùng có thể nhập tiêu đề cho phần sản phẩm. Ví dụ, nếu tiêu đề là **"Chi tiết sản phẩm"** thì phần sản phẩm sẽ như thế này:
+
+<Frame caption="Tiêu đề sản phẩm">
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image150_81cf5cd493.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
@@ -36,90 +40,101 @@ Người dùng có thể lựa chọn các bố cục hiển thị sản phẩm,
   />
 </Frame>
 
+**Kích thước / Màu sắc**
 
-  * **Kích thước/ Màu sắc**:  
-  * Người dùng có thể điều chỉnh kích thước và màu sắc cho tiêu đề của phần sản phẩm tại ![][image125]
+- Người dùng có thể điều chỉnh kích thước và màu sắc cho tiêu đề của phần sản phẩm tại ![][image125].
 
-	**Hình ảnh**  
-		**Chiều cao**
+**Hình ảnh**
 
-Người dùng có thể chọn hoặc tăng/giảm chiều cao của banner tại **![][image126]**
+**Chiều cao**
 
-		**Kiểu căn chỉnh ảnh**   
-Người dùng có thể chọn kiểu căn chỉnh hình ảnh sản phẩm tại
+- Người dùng có thể chọn hoặc tăng/giảm chiều cao của banner tại ![][image126].
 
-**Tổng quan**  
-		**Hiển thị tên sản phẩm**:
+**Kiểu căn chỉnh ảnh**\
+Người dùng có thể chọn kiểu căn chỉnh hình ảnh sản phẩm tại …
 
-* Người dùng nhấn nút ![][image108]để chuyển đổi qua lại giữa 2 trạng thái có tên sản phẩm và không có tên sản phẩm
+**Tổng quan**
 
-		**Hiển thị nhãn:**
+**Hiển thị tên sản phẩm**
 
-* Người dùng nhấn nút ![][image108]để chuyển đổi qua lại giữa 2 trạng thái có nhãn và không có nhãn  
-  *   
-  * **Hiển thị tên danh mục:**  
-    * Người dùng nhấn nút ![][image109]để chuyển đổi qua lại giữa 2 trạng thái có danh mục và không có danh mục
+- Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để bật/tắt tên sản phẩm.
 
-		**Hiển thị tên thương hiệu:**
+**Hiển thị nhãn**
 
-* Người dùng nhấn nút ![][image109]để chuyển đổi qua lại giữa 2 trạng thái có tên thương hiệu và không có tên thương hiệu  
-  **Hiển thị tên cửa hàng:**  
-* Người dùng nhấn nút ![][image109]để chuyển đổi qua lại giữa 2 trạng thái có tên cửa hàng và không có tên cửa hàng
+- Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để bật/tắt nhãn.
 
-  **Hiển thị số sao đánh giá:**
+**Hiển thị tên danh mục**
 
-  * Người dùng nhấn nút ![][image109]để chuyển đổi qua lại giữa 2 trạng thái có hiển thị số sao đánh giá và không có hiển thị số sao đánh giá  
-  * **Hiển thị số lượng đã bán:**  
-    * Người dùng nhấn nút ![][image116]để chuyển đổi qua lại giữa 2 trạng thái có số lượng đã bán và không có số lượng đã bán
+- Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để bật/tắt tên danh mục.
 
-		
+**Hiển thị tên thương hiệu**
 
-		**Hiển thị số lượng yêu thích**
+- Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để bật/tắt tên thương hiệu.
 
-* Người dùng nhấn nút ![][image115]để chuyển đổi qua lại giữa 2 trạng thái có số lượng yêu thích và không có số lượng yêu thích
+**Hiển thị tên cửa hàng**
 
-		**Sản phẩm Sale:**
+- Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để bật/tắt tên cửa hàng.
 
-* Người dùng nhấn nút ![][image112]để chuyển đổi qua lại giữa 2 trạng thái có sản phẩm sale và không có sản phẩm sale
+**Hiển thị số sao đánh giá**
 
-		**Hiển thị yêu thích:**
+- Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để bật/tắt số sao đánh giá.
 
-* Người dùng nhấn nút ![][image114]để chuyển đổi qua lại giữa 2 trạng thái có nút yêu thích và không có nút yêu thích
+**Hiển thị số lượng đã bán**
 
-		**Hiển thị chia sẻ link:**
+- Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để bật/tắt số lượng đã bán.
 
-* Người dùng nhấn nút ![][image114]để chuyển đổi qua lại giữa 2 trạng thái có chia sẻ link và không có chia sẻ link  
-  * **Hiển thị sao chép link:**  
-    * Người dùng nhấn nút ![][image114]để chuyển đổi qua lại giữa 2 trạng thái có sao chép link và không có sao chép link  
-  * **Hiển thị giá tiền:**  
-    * Người dùng nhấn nút ![][image116]để chuyển đổi qua lại giữa 2 trạng thái có hiển thị giá tiền và không có hiển thị giá tiền  
-  * **Hiển thị giá giảm:**  
-    * Người dùng nhấn nút ![][image116]để chuyển đổi qua lại giữa 2 trạng thái có hiển thị giá giảm và không có hiển thị giá giảm
+**Hiển thị số lượng yêu thích**
 
-		**Tiếp thị liên kết:**
+- Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để bật/tắt số lượng yêu thích.
 
-Người dùng nhấn nút ![][image116]để chuyển đổi qua lại giữa 2 trạng thái có tiếp thị liên kết và không có tiếp thị liên kết
+**Sản phẩm sale**
 
-		**Hiển thị mô tả:**
+- Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để bật/tắt trạng thái sale.
 
-Người dùng nhấn nút ![][image116]để chuyển đổi qua lại giữa 2 trạng thái có hiển thị mô tả và không có hiển thị mô tả
+**Hiển thị yêu thích**
 
-* **Hiển thị đánh giá**  
-  * Người dùng nhấn nút ![][image115]để chuyển đổi qua lại giữa 2 trạng thái có hiển thị đánh giá và không có hiển thị đánh giá.  
-  * **Hiển thị sản phẩm liên quan:**  
-    * Người dùng nhấn nút ![][image117]để chuyển đổi qua lại giữa 2 trạng thái có hiển thị sản phẩm liên quan và không có hiển thị sản phẩm liên quan.
+- Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để bật/tắt nút yêu thích.
 
-	**Chăm sóc khách hàng**
+**Hiển thị chia sẻ link**
 
-		**Hiển thị chăm sóc khách hàng:**
+- Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để bật/tắt chia sẻ link.
+  - **Hiển thị sao chép link:** Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để bật/tắt sao chép link.
 
-Người dùng nhấn nút ![][image117]để chuyển đổi qua lại giữa 2 trạng thái có hiển thị chăm sóc khách hàng và không có hiển thị chăm sóc khách hàng
+**Hiển thị giá tiền**
 
-		**Thêm:**
+- Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để bật/tắt hiển thị giá tiền.
 
-* **Bước 1**: Người dùng nhấn vào nút "Thêm mục mới"
+**Hiển thị giá giảm**
 
-<Frame caption="Nút thêm mục mới  ">
+- Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để bật/tắt hiển thị giá giảm.
+
+**Tiếp thị liên kết**
+
+- Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để bật/tắt tiếp thị liên kết.
+
+**Hiển thị mô tả**
+
+- Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để bật/tắt mô tả.
+
+**Hiển thị đánh giá**
+
+- Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để bật/tắt đánh giá.
+
+**Hiển thị sản phẩm liên quan**
+
+- Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để bật/tắt sản phẩm liên quan.
+
+**Chăm sóc khách hàng**
+
+**Hiển thị chăm sóc khách hàng**
+
+- Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để bật/tắt chăm sóc khách hàng.
+
+**Thêm**
+
+- **Bước 1:** Người dùng nhấn vào nút **"Thêm mục mới"**.
+
+<Frame caption="Nút thêm mục mới">
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image196_522cbb778a.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
@@ -128,10 +143,9 @@ Người dùng nhấn nút ![][image117]để chuyển đổi qua lại giữa 2
   />
 </Frame>
 
-
-  * **Bước 2:**  
-    * Người dùng nhập tiêu đề   
-    * Người dùng nhấn "Tải ảnh lên hoặc chọn ảnh từ thư viện" 
+- **Bước 2:**
+  - Người dùng nhập tiêu đề.
+  - Người dùng nhấn **"Tải ảnh lên hoặc chọn ảnh từ thư viện"**.
 
 <Frame caption="Thêm dữ liệu">
   <img
@@ -142,10 +156,11 @@ Người dùng nhấn nút ![][image117]để chuyển đổi qua lại giữa 2
   />
 </Frame>
 
+- **Bước 3:** Người dùng nhấn **"Thêm dữ liệu"** để thêm ảnh hoặc nhấn **"Hủy bỏ"** để hủy.
 
-  * **Bước 3**: Người dùng nhấn "Thêm dữ liệu" để tiến hành thêm ảnh hoặc nhấn "Hủy bỏ" để hủy quá trình thêm dữ liệu  
-* **Chỉnh sửa:**  
-  * **Bước 1:** Người dùng nhấn vào nút ![][image94]để đến trang chỉnh sửa
+**Chỉnh sửa**
+
+- **Bước 1:** Người dùng nhấn nút <Icon icon="pencil" color="#cfcfcf" size={15} /> để đến trang chỉnh sửa.
 
 <Frame caption="Nút chỉnh sửa">
   <img
@@ -156,8 +171,7 @@ Người dùng nhấn nút ![][image117]để chuyển đổi qua lại giữa 2
   />
 </Frame>
 
-
-  * **Bước 2:** Người dùng nhập tiêu đề, nhấn "Tải ảnh lên hoặc chọn ảnh từ thư viện" 
+- **Bước 2:** Người dùng nhập tiêu đề, nhấn **"Tải ảnh lên hoặc chọn ảnh từ thư viện"**.
 
 <Frame caption="Trang chỉnh sửa dữ liệu">
   <img
@@ -168,9 +182,11 @@ Người dùng nhấn nút ![][image117]để chuyển đổi qua lại giữa 2
   />
 </Frame>
 
-  * **Bước 3**: Người dùng nhấn "Lưu chỉnh sửa" để tiến hành chỉnh sửa ảnh hoặc nhấn "Hủy bỏ" để hủy quá trình chỉnh sửa dữ liệu  
-* **Xóa:**  
-  * **Bước 1:** Người dùng nhấn vào nút ![][image97]để xóa dữ liệu
+- **Bước 3:** Người dùng nhấn **"Lưu chỉnh sửa"** để lưu hoặc **"Hủy bỏ"** để hủy.
+
+**Xóa**
+
+- **Bước 1:** Người dùng nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} /> để xóa dữ liệu.
 
 <Frame caption="Nút xóa">
   <img
@@ -181,82 +197,111 @@ Người dùng nhấn nút ![][image117]để chuyển đổi qua lại giữa 2
   />
 </Frame>
 
- 
-  * **Bước 2:** Tại hộp thông báo hiện lên, người dùng nhấn 'Xóa ngay" để tiến hành xóa hoặc nhấn "Hủy" để hủy quá trình xóa dữ liệu
+- **Bước 2:** Ở hộp thông báo, người dùng nhấn **"Xóa ngay"** để xóa hoặc **"Hủy"** để hủy.
 
-	**Thanh tác vụ** 
+**Thanh tác vụ**
 
-		**Trạng thái**
-
-		Người dùng có thể nhấn để chuyển đổi giữa chế độ Cố định và Cuộn ẩn
+**Trạng thái**\
+Người dùng có thể nhấn để chuyển đổi giữa chế độ **Cố định** và **Cuộn ẩn**.
 
 ![][image132]
 
-		**Hiển thị giỏ hàng**
+**Hiển thị giỏ hàng**\
+Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để bật/tắt giỏ hàng.
 
-Người dùng nhấn nút ![][image116]để chuyển đổi qua lại giữa 2 trạng thái có giỏ hàng và không có giỏ hàng
+**Hiển thị tư vấn**\
+Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để bật/tắt tư vấn.
 
-		**Hiển thị tư vấn**
+**Hiển thị yêu thích**\
+Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để bật/tắt hiển thị yêu thích.
 
-Người dùng nhấn nút ![][image116]để chuyển đổi qua lại giữa 2 trạng thái có tư vấn và không có tư vấn
+**Thẻ sản phẩm liên quan**
 
-		**Hiển thị yêu thích**
+**Lề ngoài**
 
-Người dùng nhấn nút ![][image116]để chuyển đổi qua lại giữa 2 trạng thái có hiển thị yêu thích và không có hiển thị yêu thích
+- Người dùng điều chỉnh **chung** khoảng cách trên/dưới giữa các thẻ sản phẩm với phần danh sách bằng nút ![][image133] tại **Lề ngoài**; có thể điều chỉnh riêng lề trên và lề dưới bằng nút ![][image134].
+- Người dùng điều chỉnh khoảng cách **trái/phải** giữa các thẻ sản phẩm với phần danh sách bằng nút ![][image135] tại **Lề ngoài**; có thể điều chỉnh riêng lề trái và lề phải bằng nút ![][image136].
 
-	**Thẻ sản phẩm liên quan**
+**Lề trong**
 
-		**Lề ngoài**
+- Điều chỉnh chung khoảng cách trên/dưới giữa các thẻ sản phẩm với thành phần bên trong bằng nút ![][image137] tại **Lề trong**; có thể điều chỉnh riêng lề trên và lề dưới bằng nút ![][image138].
+- Điều chỉnh khoảng cách trái/phải giữa các thẻ sản phẩm với thành phần bên trong bằng nút ![][image139]; có thể điều chỉnh riêng lề trái và lề phải bằng nút ![][image140].
 
-* Người dùng điều chỉnh chung khoảng cách giữa lề trên và dưới giữa các thẻ sản phẩm với phần danh sách sản phẩm bằng nút ![][image133]tại phần **Lề ngoài**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image134]  
-  * Người dùng điều chỉnh khoảng cách giữa lề trái và phải giữa các thẻ sản phẩm với phần danh sách sản phẩm bằng nút ![][image135]tại phần **Lề ngoài**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image136]  
-  * **Lề trong**  
-    * Người dùng điều chỉnh chung khoảng cách giữa lề trên và dưới giữa các thẻ sản phẩm với các thành phần bên trong thẻ bằng nút ![][image137]tại phần **Lề trong**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image138]  
-    * Người dùng điều chỉnh khoảng cách giữa lề trái và phải giữa các thẻ sản phẩm với các thành phần bên trong thẻ bằng nút ![][image139]tại phần **Lề trong**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image140]  
-  * **Kích thước**  
-    * Người dùng có thể điều chỉnh kích thước cho tiêu đề của thẻ sản phẩm tại ![][image106]  
-  * **Kiểu hình ảnh**   
-    * Người dùng có thể chọn kiểu hình ảnh các thẻ sản phẩm tại ![][image107]  
-  *   
-  * **Nền**  
-    * Chọn màu nền cho thẻ sản phẩm bằng cách nhấn ô vuông ![][image120]sau đó chọn màu  
-    * Chuyển đổi qua lại giữa 2 trạng thái có màu nền và không có màu nền bằng cách nhấn nút ![][image121]  
-    * Xóa màu nền bằng cách nhấn nút ![][image122]  
-  * **Bo góc**  
-    * Người dùng có thể nhập hoặc tăng/giảm chung độ bo góc của 4 góc của thẻ sản phẩm tại ô nhập ![][image141]hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách nhấn nút ![][image142]  
-  * **Viền**  
-    * Người dùng có thể nhập hoặc tăng/giảm chung độ lớn viền của thẻ sản phẩm tại ô nhập ![][image143]  
-    * Chọn màu cho viền bằng cách nhấn ô vuông ![][image144]sau đó chọn màu  
-    * Chuyển đổi qua lại giữa 2 trạng thái có viền và không viền bằng cách nhấn nút ![][image145]  
-    * Xóa viền bằng cách nhấn nút ![][image146]  
-  * **Đổ bóng**  
-    * Người dùng có thể chọn độ lớn đổ bóng của thẻ sản phẩm tại ô ![][image147]  
-    * Chọn màu cho đổ bóng bằng cách nhấn ô vuông ![][image148]sau đó chọn màu  
-    * Chuyển đổi qua lại giữa 2 trạng thái có đổ bóng và không đổ bóng bằng cách nhấn nút ![][image149]  
-    * Xóa đổ bóng bằng cách nhấn nút ![][image150]  
-  * **Hiển thị tên sản phẩm**:  
-    * Người dùng nhấn nút ![][image108]để chuyển đổi qua lại giữa 2 trạng thái có tên sản phẩm và không có tên sản phẩm  
-  * **Hiển thị danh mục:**  
-    * Người dùng nhấn nút ![][image109]để chuyển đổi qua lại giữa 2 trạng thái có danh mục và không có danh mục  
-  * **Hiển thị giá tiền:**  
-    * Người dùng chọn không hiển thị giá, giá cơ bản, giá khuyến mãi hoặc tất cả tại ![][image110]  
-  * **Hiển thị giá giảm:**  
-    * Người dùng chọn hiển thị giá giảm theo phần trăm hay giá gốc![][image111]  
-  * **Sản phẩm Sale:**  
-    * Người dùng nhấn nút ![][image112]để chuyển đổi qua lại giữa 2 trạng thái có sản phẩm sale và không có sản phẩm sale  
-  * **Hiển thị nhãn:**  
-    * Người dùng chọn không hiển thị nhãn ![][image113] hoặc chọn hiển thị nhãn flashsale, bán chạy, mới nhất.  
-  * **Hiển thị yêu thích:**  
-    * Người dùng nhấn nút ![][image114]để chuyển đổi qua lại giữa 2 trạng thái có nút yêu thích và không có nút yêu thích  
-  * **Hiển thị đánh giá**  
-    * Người dùng nhấn nút ![][image115]để chuyển đổi qua lại giữa 2 trạng thái có số sao đánh giá và không có số sao đánh giá  
-  * **Hiển thị số lượng yêu thích**  
-    * Người dùng nhấn nút ![][image115]để chuyển đổi qua lại giữa 2 trạng thái có số lượng yêu thích và không có số lượng yêu thích  
-  * **Hiển thị số lượng đã bán:**  
-    * Người dùng nhấn nút ![][image116]để chuyển đổi qua lại giữa 2 trạng thái có số lượng đã bán và không có số lượng đã bán  
-  * **Hiển thị nút giỏ hàng:**  
-    * Người dùng nhấn nút ![][image117]để chuyển đổi qua lại giữa 2 trạng thái có nút thêm vào giỏ hàng và không có nút thêm vào giỏ hàng.
+**Kích thước**
 
-		**Kiểu nút giỏ hàng:** 
+- Điều chỉnh kích thước tiêu đề thẻ sản phẩm tại ![][image106].
 
-Người dùng có thể chọn chuyển đổi hiển thị giỏ hàng giữa icon hoặc button ![][image118]
+**Kiểu hình ảnh**
+
+- Chọn kiểu hình ảnh các thẻ sản phẩm tại ![][image107].
+
+**Nền**
+
+- Chọn màu nền cho thẻ sản phẩm bằng cách nhấn ô vuông ![][image120] sau đó chọn màu.
+- Chuyển đổi qua lại giữa 2 trạng thái có màu nền và không có màu nền bằng nút ![][image121].
+- Xóa màu nền bằng nút ![][image122].
+
+**Bo góc**
+
+- Nhập hoặc tăng/giảm **chung** độ bo góc của 4 góc tại ô ![][image141]; hoặc điều chỉnh **riêng lẻ** từng góc bằng nút ![][image142].
+
+**Viền**
+
+- Nhập hoặc tăng/giảm độ lớn viền tại ô ![][image143].
+- Chọn màu viền bằng cách nhấn ô vuông ![][image144] sau đó chọn màu.
+- Bật/tắt viền bằng nút <Icon icon="eye" color="#cfcfcf" size={15} />.
+- Xóa viền bằng nút <Icon icon="minus" color="#cfcfcf" size={15} />.
+
+**Đổ bóng**
+
+- Chọn độ lớn đổ bóng tại ô ![][image147].
+- Chọn màu đổ bóng bằng cách nhấn ô vuông ![][image148] sau đó chọn màu.
+- Bật/tắt đổ bóng bằng nút <Icon icon="eye" color="#cfcfcf" size={15} />.
+- Xóa đổ bóng bằng nút <Icon icon="minus" color="#cfcfcf" size={15} />.
+
+**Hiển thị tên sản phẩm**
+
+- Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để bật/tắt tên sản phẩm.
+
+**Hiển thị danh mục**
+
+- Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để bật/tắt danh mục.
+
+**Hiển thị giá tiền**
+
+- Chọn **Không hiển thị / Giá cơ bản / Giá khuyến mãi / Tất cả** tại ![][image110].
+
+**Hiển thị giá giảm**
+
+- Chọn hiển thị giá giảm theo **%** hay **giá gốc** tại ![][image111].
+
+**Sản phẩm sale**
+
+- Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để bật/tắt trạng thái sale.
+
+**Hiển thị nhãn**
+
+- Chọn **không hiển thị** ![][image113] hoặc hiển thị nhãn **Flash sale / Bán chạy / Mới nhất**.
+
+**Hiển thị yêu thích**
+
+- Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để bật/tắt nút yêu thích.
+
+**Hiển thị đánh giá**
+
+- Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để bật/tắt số sao đánh giá.
+
+**Hiển thị số lượng yêu thích**
+
+- Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để bật/tắt số lượng yêu thích.
+
+**Hiển thị số lượng đã bán**
+
+- Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để bật/tắt số lượng đã bán.
+
+**Hiển thị nút giỏ hàng**
+
+- Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để bật/tắt nút thêm vào giỏ hàng.
+
+**Kiểu nút giỏ hàng**\
+Người dùng có thể chọn hiển thị giỏ hàng giữa **icon** hoặc **button** tại ![][image118].
