--- a/sale-management/product-management/categories-management.mdx
+++ b/sale-management/product-management/categories-management.mdx
@@ -10,7 +10,7 @@ Tại phần Quản lý sản phẩm, truy cập tab Danh mục
 
 Ở giao diện tổng quan, người dùng có thể tạo các Danh mục cho các sản phẩm của hệ thống
 
-- Chọn “\+ Thêm danh mục” để tạo danh mục cho các sản phẩm
+- Chọn “+ Thêm danh mục” để tạo danh mục cho các sản phẩm
   - Thêm từng Danh mục → Điền các thông tin biểu mẫu yêu cầu → Nhấn “Tạo” để hoàn tất thao tác thêm Danh mục
 
     ![danhMuc2.png](/screenshot_1757231532.png)
@@ -20,11 +20,10 @@ Tại phần Quản lý sản phẩm, truy cập tab Danh mục
   - Chọn icon <Icon icon="toggle-large-on" color="#3259f6" size={15} /> để bật/tắt thông tin Danh mục
 
     ![danhMuc4.png](/screenshot_1757231618.png)
-  - 
   - Chọn icon <Icon icon="pencil" color="#1511e8" size={15} /> để chỉnh sửa Danh mục
   - Chọn icon check-box để có thể xóa một hoặc nhiều Danh mục
 
     ![danhMuc6.png](/screenshot_1757231679.png)
-  - Người dùng có thể tạo các danh mục con bằng cách xét danh mục cha khi khởi tạo danh mục. Để hiển thi danh mục con, nhấn "\+" ở trước các danh mục
+  - Người dùng có thể tạo các danh mục con bằng cách xét danh mục cha khi khởi tạo danh mục. Để hiển thi danh mục con, nhấn "+" ở trước các danh mục
 
     ![danhMuc7.png](/screenshot_1757231918.png)
