--- a/app-builder/builder/pages/user-profile-page.mdx
+++ b/app-builder/builder/pages/user-profile-page.mdx
@@ -3,259 +3,255 @@ title: "User profile"
 description: "Description of your new file."
 icon: "circle-user"
 ---
-### **3.3.7. User profile** 
+
+### **3.3.7. User profile**
 
 **Bố cục**  
-Người dùng có thể lựa chọn các bố cục hiển thị trang cá nhân, bao gồm: Mặc định, Cá tính, Đơn giản  
+Người dùng có thể lựa chọn các bố cục hiển thị trang cá nhân, bao gồm: Mặc định, Cá tính, Đơn giản
 
 <Frame caption="Bố cục trang cá nhân">
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image86_fa25674407.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{ borderRadius: "0.5rem" }}
     title=""
   />
 </Frame>
 
-
-
 **Tiêu đề**
 
-		**Nền**
+**Nền**
 
-* Chọn màu nền cho thẻ sản phẩm bằng cách nhấn ô vuông ![][image120]sau đó chọn màu  
-  * Chuyển đổi qua lại giữa 2 trạng thái có màu nền và không có màu nền bằng cách nhấn nút ![][image121]  
-    * Xóa màu nền bằng cách nhấn nút ![][image122]  
-  * **Hiển thị tiêu đề:**  
-    * Người dùng nhấn nút ![][image123]để chuyển đổi qua lại giữa 2 trạng thái có tiêu đề và không có tiêu đề, ngoài ra người dùng có thể nhập tiêu đề cho trang cá nhân. Ví dụ, nếu tiêu đề là "Cá nhân" thì sẽ hiển thị như sau:
+- Chọn màu nền cho thẻ sản phẩm bằng cách nhấn ô vuông ![][image120] sau đó chọn màu
+  - Chuyển đổi qua lại giữa 2 trạng thái có màu nền và không có màu nền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
+    - Xóa màu nền bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
+  - **Hiển thị tiêu đề:**
+    - Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có tiêu đề và không có tiêu đề, ngoài ra người dùng có thể nhập tiêu đề cho trang cá nhân. Ví dụ, nếu tiêu đề là "Cá nhân" thì sẽ hiển thị như sau:
 
 <Frame caption="Tiêu đề trang cá nhân ">
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image67_2fe601f6ad.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{ borderRadius: "0.5rem" }}
     title=""
   />
 </Frame>
 
+- **Kích thước/ Màu sắc:**
+  - Người dùng có thể điều chỉnh kích thước và màu sắc cho tiêu đề của phần cá nhân tại ![][image125]
 
-  * **Kích thước/ Màu sắc**:  
-    * Người dùng có thể điều chỉnh kích thước và màu sắc cho tiêu đề của phần cá nhân tại ![][image125]
+**Tổng quan**
 
+**Phụ đề**
 
-  **Tổng quan**
-
-  	**Phụ đề** 
-
-  		Người dùng có thể nhập phụ đề cho trang cá nhân.
+- Người dùng có thể nhập phụ đề cho trang cá nhân.
 
 <Frame caption="Tiêu đề trang cá nhân ">
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image76_3436cad29e.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{ borderRadius: "0.5rem" }}
     title=""
   />
 </Frame>
 
+**Đơn hàng của tôi**
 
-**Đơn hàng của tôi** 
+- Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có hiển thị đơn hàng của tôi và không có hiển thị đơn hàng của tôi
+  - **Hóa đơn dịch vụ**
+    - Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có hiển thị hóa đơn dịch vụ và không có hiển thị hóa đơn dịch vụ
 
-* Người dùng nhấn nút ![][image114]để chuyển đổi qua lại giữa 2 trạng thái có hiển thị đơn hàng của tôi và không có hiển thị đơn hàng của tôi  
-  * **Hóa đơn dịch vụ**  
-    * Người dùng nhấn nút ![][image114]để chuyển đổi qua lại giữa 2 trạng thái có hiển thị hóa đơn dịch vụ và không có hiển thị hóa đơn dịch vụ
+**Quản lý liệu trình**
 
-  **Quản lý liệu trình** 
+- Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có quản lý liệu trình và không có quản lý liệu trình
+  - **Quản lý lịch hẹn**
+    - Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có quản lý lịch hẹn và không có quản lý lịch hẹn
+  - **Kho voucher**
+    - Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có kho voucher và không có kho voucher
+  - **Liên kết và hoa hồng**
+    - Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có liên kết và hoa hồng và không có liên kết và hoa hồng
+  - **Mini game**
+    - Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có mini game và không có mini game
+  - **Top up**
+    - Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có top up và không có top up
 
-    * Người dùng nhấn nút ![][image114]để chuyển đổi qua lại giữa 2 trạng thái có quản lý liệu trình và không có quản lý liệu trình  
-  * **Quản lý lịch hẹn**  
-    * Người dùng nhấn nút ![][image114]để chuyển đổi qua lại giữa 2 trạng thái có quản lý lịch hẹn và không có quản lý lịch hẹn   
-  * **Kho voucher**  
-    * Người dùng nhấn nút ![][image114]để chuyển đổi qua lại giữa 2 trạng thái có kho voucher và không có kho voucher  
-  * **Liên kết và hoa hồng**  
-    * Người dùng nhấn nút ![][image114]để chuyển đổi qua lại giữa 2 trạng thái có liên kết và hoa hồng và không có liên kết và hoa hồng  
-  * **Mini game**  
-    * Người dùng nhấn nút ![][image114]để chuyển đổi qua lại giữa 2 trạng thái có mini game và không có mini game   
-  * **Top up**  
-    * Người dùng nhấn nút ![][image114]để chuyển đổi qua lại giữa 2 trạng thái có top up và không có top up 
+**Sản phẩm yêu thích**
 
-		**Sản phẩm yêu thích**
+- Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có sản phẩm yêu thích và không có sản phẩm yêu thích
+  - **Dịch vụ yêu thích**
+    - Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có dịch vụ yêu thích và không có dịch vụ yêu thích
 
-* Người dùng nhấn nút ![][image114]để chuyển đổi qua lại giữa 2 trạng thái có sản phẩm yêu thích và không có sản phẩm yêu thích  
-  * **Dịch vụ yêu thích**  
-    * Người dùng nhấn nút ![][image114]để chuyển đổi qua lại giữa 2 trạng thái có dịch vụ yêu thích và không có dịch vụ yêu thích 
+**Quà tặng của tôi**
 
-		**Quà tặng của tôi** 
+- Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có quà tặng của tôi và không có quà tặng của tôi
+  - **Sổ địa chỉ**
+    - Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có sổ địa chỉ và không có sổ địa chỉ
 
-* Người dùng nhấn nút ![][image114]để chuyển đổi qua lại giữa 2 trạng thái có quà tặng của tôi và không có quà tặng của tôi   
-  * **Sổ địa chỉ**  
-    * Người dùng nhấn nút ![][image114]để chuyển đổi qua lại giữa 2 trạng thái có sổ địa chỉ và không có sổ địa chỉ 
+**Điều khoản và chính sách**
 
-		**Điều khoản và chính sách** 
+- Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có điều khoản và chính sách và không có điều khoản và chính sách
 
-* Người dùng nhấn nút ![][image114]để chuyển đổi qua lại giữa 2 trạng thái có điều khoản và chính sách và không có điều khoản và chính sách
+**Link chính sách**
 
-  **Link chính sách** 
+- Người dùng có thể điền thông tin link chính sách
 
-			Người dùng có thể điền thông tin link chính sách 
+**Liên hệ và góp ý**
 
-		**Liên hệ và góp ý** 
+- Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có liên hệ và góp ý và không có liên hệ và góp ý
 
-* Người dùng nhấn nút ![][image114]để chuyển đổi qua lại giữa 2 trạng thái có liên hệ và góp ý và không có liên hệ và góp ý 
+**Hiển thị CTA**
 
-		**Hiển thị CTA**
+- Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có CTA và không có CTA
 
-* Người dùng nhấn nút ![][image114]để chuyển đổi qua lại giữa 2 trạng thái có CTA và không có CTA
+**Hiển thị hạng thành viên**
 
-		**Hiển thị hạng thành viên**
+- Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có hạng thành viên và không có hạng thành viên
 
-* Người dùng nhấn nút ![][image114]để chuyển đổi qua lại giữa 2 trạng thái có hạng thành viên và không có hạng thành viên
+**Hạng thành viên**
 
-	**Hạng thành viên**
+**Thêm**
 
-		**Thêm**
-
-* **Bước 1**: Người dùng nhấn vào nút "Thêm mới"
+- **Bước 1**: Người dùng nhấn vào nút "Thêm mới"
 
 <Frame caption="Nút thêm mới ">
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image216_ad0aa0722d.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{ borderRadius: "0.5rem" }}
     title=""
   />
 </Frame>
 
-
- 
-  * **Bước 2:**  
-    * Người dùng nhập tên hạng thành viên, Chi tiêu tối thiểu để đạt hạng, Tỷ lệ khuyến mãi, Tổng tiền giảm tối đa
+- **Bước 2:**
+  - Người dùng nhập tên hạng thành viên, Chi tiêu tối thiểu để đạt hạng, Tỷ lệ khuyến mãi, Tổng tiền giảm tối đa
 
 <Frame caption="Thêm dữ liệu ">
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image51_e3ca8b4675.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{ borderRadius: "0.5rem" }}
     title=""
   />
 </Frame>
 
-  
-  * **Bước 3**: Người dùng nhấn "Thêm dữ liệu" để tiến hành thêm mới hoặc nhấn "Hủy bỏ" để hủy quá trình thêm dữ liệu  
-* **Chỉnh sửa:**  
-  * **Bước 1:** Người dùng nhấn vào nút ![][image94]để đến trang chỉnh sửa
+- **Bước 3**: Người dùng nhấn "Thêm dữ liệu" để tiến hành thêm mới hoặc nhấn "Hủy bỏ" để hủy quá trình thêm dữ liệu
+
+**Chỉnh sửa**
+
+- **Bước 1:** Người dùng nhấn vào nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để đến trang chỉnh sửa
 
 <Frame caption="Nút chỉnh sửa  ">
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image154_7290731921.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{ borderRadius: "0.5rem" }}
     title=""
   />
 </Frame>
 
-  * **Bước 2:** Người dùng nhập Tên hạng thành viên, Chi tiêu tối thiểu để đạt hạng, Tỷ lệ khuyến mãi, Tổng tiền giảm tối đa
+- **Bước 2:** Người dùng nhập Tên hạng thành viên, Chi tiêu tối thiểu để đạt hạng, Tỷ lệ khuyến mãi, Tổng tiền giảm tối đa
 
 <Frame caption="Trang chỉnh sửa dữ liệu  ">
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image135_ab3138c3e7.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{ borderRadius: "0.5rem" }}
     title=""
   />
 </Frame>
 
- 
-  * **Bước 3**: Người dùng nhấn "Lưu chỉnh sửa" để tiến hành chỉnh sửa hoặc nhấn "Hủy bỏ" để hủy quá trình chỉnh sửa dữ liệu  
-* **Xóa:**  
-  * **Bước 1:** Người dùng nhấn vào nút ![][image97]để xóa dữ liệu
+- **Bước 3**: Người dùng nhấn "Lưu chỉnh sửa" để tiến hành chỉnh sửa hoặc nhấn "Hủy bỏ" để hủy quá trình chỉnh sửa dữ liệu
+
+**Xóa**
+
+- **Bước 1:** Người dùng nhấn vào nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để xóa dữ liệu
 
 <Frame caption="Nút xóa ">
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image147_65956d1065.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{ borderRadius: "0.5rem" }}
     title=""
   />
 </Frame>
- 
-  * **Bước 2:** Tại hộp thông báo hiện lên, người dùng nhấn 'Xóa ngay" để tiến hành xóa hoặc nhấn "Hủy" để hủy quá trình xóa dữ liệu
 
-	**Chi tiết CTA**
+- **Bước 2:** Tại hộp thông báo hiện lên, người dùng nhấn 'Xóa ngay" để tiến hành xóa hoặc nhấn "Hủy" để hủy quá trình xóa dữ liệu
 
-		**Lề ngoài**
+**Chi tiết CTA**
 
-* Người dùng điều chỉnh chung khoảng cách giữa lề trên và dưới CTA bằng nút ![][image133]tại phần **Lề ngoài**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image134]  
-  * Người dùng điều chỉnh khoảng cách giữa lề trái và phải CTA bằng nút ![][image135]tại phần **Lề ngoài**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image136]  
-  * **Lề trong**  
-    * Người dùng điều chỉnh chung khoảng cách giữa lề trên và dưới giữa CTA với các thành phần bên trong CTA bằng nút ![][image137]tại phần **Lề trong**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image138]  
-    * Người dùng điều chỉnh khoảng cách giữa lề trái và phải giữa CTA bằng nút ![][image139]tại phần **Lề trong**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image140]
+**Lề ngoài**
 
-		**Nền**
+- Người dùng điều chỉnh chung khoảng cách giữa lề trên và dưới CTA bằng nút ![][image133] tại phần **Lề ngoài**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image134]
+  - Người dùng điều chỉnh khoảng cách giữa lề trái và phải CTA bằng nút ![][image135] tại phần **Lề ngoài**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image136]
+  - **Lề trong**
+    - Người dùng điều chỉnh chung khoảng cách giữa lề trên và dưới giữa CTA với các thành phần bên trong CTA bằng nút ![][image137] tại phần **Lề trong**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image138]
+    - Người dùng điều chỉnh khoảng cách giữa lề trái và phải giữa CTA bằng nút ![][image139] tại phần **Lề trong**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image140]
 
-* Chọn màu nền cho phần CTA bằng cách nhấn ô vuông ![][image159]sau đó chọn màu  
-  * Chuyển đổi qua lại giữa 2 trạng thái có màu nền và không có màu nền bằng cách nhấn nút ![][image160]  
-    * Xóa màu nền bằng cách nhấn nút ![][image161]  
-  * **Bo góc**  
-    * Người dùng có thể nhập hoặc tăng/giảm chung độ bo góc của 4 góc của phần CTA tại ô nhập ![][image162]hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách nhấn nút ![][image163]  
-  * **Viền**  
-    * Người dùng có thể nhập hoặc tăng/giảm chung độ lớn viền của phần CTA tại ô nhập ![][image164]  
-    * Chọn màu cho viền bằng cách nhấn ô vuông ![][image165]sau đó chọn màu  
-    * Chuyển đổi qua lại giữa 2 trạng thái có viền và không viền bằng cách nhấn nút ![][image166]  
-    * Xóa viền bằng cách nhấn nút ![][image167]  
-  * **Đổ bóng**  
-    * Người dùng có thể chọn độ lớn đổ bóng của phần CTA tại ô ![][image168]  
-    * Chọn màu cho đổ bóng bằng cách nhấn ô vuông ![][image169]sau đó chọn màu  
-    * Chuyển đổi qua lại giữa 2 trạng thái có đổ bóng và không đổ bóng bằng cách nhấn nút ![][image170]  
-    * Xóa đổ bóng bằng cách nhấn nút ![][image171]
+**Nền**
 
-		**Hiển thị tiêu đề:**
+- Chọn màu nền cho phần CTA bằng cách nhấn ô vuông ![][image159] sau đó chọn màu
+  - Chuyển đổi qua lại giữa 2 trạng thái có màu nền và không có màu nền bằng cách nhấn nút !<Icon icon="eye" color="#cfcfcf" size={15} />
+    - Xóa màu nền bằng cách nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} />
+  - **Bo góc**
+    - Người dùng có thể nhập hoặc tăng/giảm chung độ bo góc của 4 góc của phần CTA tại ô nhập ![][image162] hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách nhấn nút ![][image163]
+  - **Viền**
+    - Người dùng có thể nhập hoặc tăng/giảm chung độ lớn viền của phần CTA tại ô nhập ![][image164]
+    - Chọn màu cho viền bằng cách nhấn ô vuông ![][image165] sau đó chọn màu
+    - Chuyển đổi qua lại giữa 2 trạng thái có viền và không viền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
+    - Xóa viền bằng cách nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} />
+  - **Đổ bóng**
+    - Người dùng có thể chọn độ lớn đổ bóng của phần CTA tại ô ![][image168]
+    - Chọn màu cho đổ bóng bằng cách nhấn ô vuông ![][image169] sau đó chọn màu
+    - Chuyển đổi qua lại giữa 2 trạng thái có đổ bóng và không đổ bóng bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
+    - Xóa đổ bóng bằng cách nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} />
 
-* Người dùng nhấn nút ![][image172]để chuyển đổi qua lại giữa 2 trạng thái có tiêu đề và không có tiêu đề, ngoài ra người dùng có thể nhập tiêu đề cho phần CTA. Ví dụ, nếu tiêu đề là "Nhận thông báo các bài viết, sự kiện nổi bật" thì phần CTA sẽ như thế này
+**Hiển thị tiêu đề:**
+
+- Người dùng nhấn nút ![][image172] để chuyển đổi qua lại giữa 2 trạng thái có tiêu đề và không có tiêu đề, ngoài ra người dùng có thể nhập tiêu đề cho phần CTA. Ví dụ, nếu tiêu đề là "Nhận thông báo các bài viết, sự kiện nổi bật" thì phần CTA sẽ như thế này
 
 <Frame caption="Tiêu đề CTA ">
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image134_4d233bade4.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{ borderRadius: "0.5rem" }}
     title=""
   />
 </Frame>
 
-* **Kích thước/ Màu sắc:**  
-  * Người dùng có thể điều chỉnh kích thước và màu sắc cho tiêu đề của phần CTA tại ![][image174]  
-* **Hiển thị nút quan tâm:**  
-  * Người dùng nhấn nút ![][image175]để chuyển đổi qua lại giữa 2 trạng thái có nút quan tâm OA và không có nút quan tâm OA  
-* **Hiển thị nút tạo lối tắt:**  
-  * Người dùng nhấn nút ![][image176]để chuyển đổi qua lại giữa 2 trạng thái có nút tạo lối tắt và không có nút tạo lối tắt  
-  * **Hiển thị nút liên hệ:**  
-    Người dùng nhấn nút ![][image176]để chuyển đổi qua lại giữa 2 trạng thái có nút liên hệ và không có nút liên hệ
+- **Kích thước/ Màu sắc:**
+  - Người dùng có thể điều chỉnh kích thước và màu sắc cho tiêu đề của phần CTA tại ![][image174]
+- **Hiển thị nút quan tâm:**
+  - Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có nút quan tâm OA và không có nút quan tâm OA
+- **Hiển thị nút tạo lối tắt:**
+  - Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có nút tạo lối tắt và không có nút tạo lối tắt
+  - **Hiển thị nút liên hệ:**
+    Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có nút liên hệ và không có nút liên hệ
 
 **Nền**
 
-* Chọn màu nền cho phần CTA bằng cách nhấn ô vuông ![][image159]sau đó chọn màu  
-  * Chuyển đổi qua lại giữa 2 trạng thái có màu nền và không có màu nền bằng cách nhấn nút ![][image160]  
-  * Xóa màu nền bằng cách nhấn nút ![][image161]  
-* **Bo góc**  
-  * Người dùng có thể nhập hoặc tăng/giảm chung độ bo góc của 4 góc của phần CTA tại ô nhập ![][image162]hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách nhấn nút ![][image163]  
-* **Viền**  
-  * Người dùng có thể nhập hoặc tăng/giảm chung độ lớn viền của phần CTA tại ô nhập ![][image164]  
-  * Chọn màu cho viền bằng cách nhấn ô vuông ![][image165]sau đó chọn màu  
-  * Chuyển đổi qua lại giữa 2 trạng thái có viền và không viền bằng cách nhấn nút ![][image166]  
-  * Xóa viền bằng cách nhấn nút ![][image167]  
-* **Đổ bóng**  
-  * Người dùng có thể chọn độ lớn đổ bóng của phần CTA tại ô ![][image168]  
-  * Chọn màu cho đổ bóng bằng cách nhấn ô vuông ![][image169]sau đó chọn màu  
-  * Chuyển đổi qua lại giữa 2 trạng thái có đổ bóng và không đổ bóng bằng cách nhấn nút ![][image170]  
-  * Xóa đổ bóng bằng cách nhấn nút ![][image171]
+- Chọn màu nền cho phần CTA bằng cách nhấn ô vuông ![][image159] sau đó chọn màu
+  - Chuyển đổi qua lại giữa 2 trạng thái có màu nền và không có màu nền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
+  - Xóa màu nền bằng cách nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} />
+- **Bo góc**
+  - Người dùng có thể nhập hoặc tăng/giảm chung độ bo góc của 4 góc của phần CTA tại ô nhập ![][image162] hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách nhấn nút ![][image163]
+- **Viền**
+  - Người dùng có thể nhập hoặc tăng/giảm chung độ lớn viền của phần CTA tại ô nhập ![][image164]
+  - Chọn màu cho viền bằng cách nhấn ô vuông ![][image165] sau đó chọn màu
+  - Chuyển đổi qua lại giữa 2 trạng thái có viền và không viền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
+  - Xóa viền bằng cách nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} />
+- **Đổ bóng**
+  - Người dùng có thể chọn độ lớn đổ bóng của phần CTA tại ô ![][image168]
+  - Chọn màu cho đổ bóng bằng cách nhấn ô vuông ![][image169] sau đó chọn màu
+  - Chuyển đổi qua lại giữa 2 trạng thái có đổ bóng và không đổ bóng bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
+  - Xóa đổ bóng bằng cách nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} />
 
-	**Nút liên hệ**
+**Nút liên hệ**
 
-* Chọn màu nền cho nút liên hệ bằng cách nhấn ô vuông ![][image169]sau đó chọn màu  
-  * Chuyển đổi qua lại giữa 2 trạng thái có nút liên hệ và không có nút liên hệ bằng cách nhấn nút ![][image170]  
-  * Xóa nút liên hệ bằng cách nhấn nút ![][image171]  
-  * Người dùng có thể nhập số điện thoại 
+- Chọn màu nền cho nút liên hệ bằng cách nhấn ô vuông ![][image169] sau đó chọn màu
+  - Chuyển đổi qua lại giữa 2 trạng thái có nút liên hệ và không có nút liên hệ bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
+  - Xóa nút liên hệ bằng cách nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} />
+  - Người dùng có thể nhập số điện thoại
 
 **Màu sắc nút liên hệ**
 
-* Chọn màu cho nút liên hệ bằng cách nhấn ô vuông ![][image169]sau đó chọn màu
+- Chọn màu cho nút liên hệ bằng cách nhấn ô vuông ![][image169] sau đó chọn màu
